test/files/pos/bug116.scala
class C {
  def this(x: Int) = {
    this();
    class D extends C;
  }
}
